# claude-pilot

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_AUDIT_REPORT.md  DOCUMENTATION_IMPROVEMENT_PENDING_ITEMS.md  GETTING_STARTED.md  ISSUE_01_confirm_plan_extraction_gap.md  README.md  coverage.json  install.sh  mcp.json  pyproject.toml
.cgcode/plan/active/: detached.txt
.claude/: .external-skills-version  settings.json
.claude/agents/: CONTEXT.md  coder.md  documenter.md  explorer.md  reviewer.md
.claude/backup/guides-20260115/: tdd-methodology.md
.claude/commands/: 00_plan.md  01_confirm.md  02_execute.md  03_close.md  90_review.md  91_document.md  999_publish.md  CONTEXT.md
.claude/guides/: 3tier-documentation.md  CONTEXT.md  parallel-execution-REFERENCE.md  parallel-execution.md  prp-framework.md  requirements-tracking.md  requirements-verification.md  review-extensions.md  test-environment.md
.claude/rules/core/: workflow.md
.claude/rules/delegator/: orchestration.md  triggers.md
.claude/scripts/: analyze-typescript.mjs  api-pattern-analyzer.mjs  codex-sync.sh  component-analyzer.mjs  context-package-generator.mjs  data-flow-tracker.mjs  run-analysis.mjs  simple-analyzer.mjs  simple_post_hook.sh  simple_test.sh  smart-import-generator.mjs  statusline.sh  test-context.mjs  worktree-utils.sh
.claude/skills/git-master/: SKILL.md
.claude/skills/ralph-loop/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/templates/: AGENT.md.template  CONTEXT.md.template  PRP.md.template  SKILL.md.template
docs/ai-context/: docs-overview.md  project-structure.md  system-integration.md
examples/: README.md
examples/minimal-typescript/: CLAUDE.md  README.md
scripts/: sync-templates.sh  verify-version-sync.sh
src/claude_pilot/: CONTEXT.md  __init__.py  assets.py  build_hook.py  codex.py  config.py  updater.py
tests/: test_assets.py  test_build_hook.py  test_codex.py  test_docs_version.py  test_statusline.py  test_updater.py
(+90 files in other folders)
