[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-pilot"
version = "3.1.3"
description = "Claude Code CLI Pilot - Your development workflow companion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "changoo89", email = "noreply@example.com" }
]
keywords = ["claude", "cli", "development", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.28.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-pilot = "claude_pilot.cli:main"
claude_pilot = "claude_pilot.cli:main"

[project.urls]
Homepage = "https://github.com/changoo89/claude-pilot"
Repository = "https://github.com/changoo89/claude-pilot"
Issues = "https://github.com/changoo89/claude-pilot/issues"

[tool.hatch.build.targets.wheel]
sources = { "src" = "" }

[tool.hatch.build]
include = [
  "src/claude_pilot/**/*.py",
  "src/claude_pilot/templates/**",
]

[tool.ruff]
line-length = 100
target-version = "3.1.3"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.1.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/claude_pilot --cov-report=term-missing"
